--- a/package.json
+++ b/package.json
@@ -4,16 +4,28 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "webpack --watch",
+    "start": "nodemon server.js",
     "test": "jest"
   },
   "author": "Johannes Borgström",
   "license": "MIT",
   "dependencies": {
+    "@babel/core": "^7.0.0-beta.32",
+    "@babel/preset-env": "^7.0.0-beta.32",
+    "babel-cli": "^6.26.0",
     "express": "^4.16.2",
-    "webpack": "^3.8.1"
+    "react": "^16.1.1",
+    "react-dom": "^16.1.1"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
     "eslint": "^4.11.0",
-    "jest": "^21.2.1"
+    "eslint-plugin-react": "^7.5.1",
+    "jest": "^21.2.1",
+    "nodemon": "^1.12.1",
+    "webpack": "^3.8.1"
   }
 }
