--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.2",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.1",
+    "css-loader": "^0.28.7",
     "eslint": "^4.11.0",
     "eslint-plugin-react": "^7.5.1",
     "jest": "^21.2.1",
     "nodemon": "^1.12.1",
+    "style-loader": "^0.19.0",
     "webpack": "^3.8.1"
   }
 }
