--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --watch",
-    "start": "nodemon server.js",
+    "start": "npm-run-all -p build dev:sass dev:server",
+    "dev:sass": "node-sass src --output src --watch",
+    "dev:server": "nodemon server.js",
     "test": "jest"
   },
   "author": "Johannes Borgström",
@@ -16,7 +18,8 @@
     "babel-cli": "^6.26.0",
     "express": "^4.16.2",
     "react": "^16.1.1",
-    "react-dom": "^16.1.1"
+    "react-dom": "^16.1.1",
+    "sass-loader": "^6.0.6"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -28,7 +31,9 @@
     "eslint": "^4.11.0",
     "eslint-plugin-react": "^7.5.1",
     "jest": "^21.2.1",
+    "node-sass": "^4.7.2",
     "nodemon": "^1.12.1",
+    "npm-run-all": "^4.1.2",
     "style-loader": "^0.19.0",
     "webpack": "^3.8.1"
   }
