--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,12 @@
     "react"
   ],
   "plugins": [
-    "transform-class-properties"
-  ]
+    "transform-class-properties",
+    "transform-es2015-arrow-functions"
+  ],
+  "env": {
+    "test": {
+      "plugins": ["transform-es2015-modules-commonjs"]
+    }
+  }
 }
