--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --watch",
-    "start": "npm-run-all -p build dev:sass dev:server",
+    "build": "jest && webpack",
+    "build:dev": "webpack --watch",
+    "start": "npm-run-all -p build:dev dev:sass dev:server",
     "dev:sass": "node-sass src --output src --watch",
     "dev:server": "nodemon server.js",
-    "test": "jest"
+    "test": "jest --watch"
   },
   "author": "Johannes Borgström",
   "license": "MIT",
@@ -24,9 +25,11 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.2",
+    "babel-jest": "^21.2.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
     "eslint": "^4.11.0",
     "eslint-plugin-react": "^7.5.1",
@@ -36,5 +39,25 @@
     "npm-run-all": "^4.1.2",
     "style-loader": "^0.19.0",
     "webpack": "^3.8.1"
+  },
+  "jest": {
+    "modulePaths": [
+      "/shared/vendor/modules"
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "jsx"
+    ],
+    "moduleDirectories": [
+      "node_modules",
+      "bower_components",
+      "shared"
+    ],
+    "moduleNameMapper": {
+      "^react(.*)$": "<rootDir>/vendor/react-master$1",
+      "^config$": "<rootDir>/configs/app-config.js",
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+    }
   }
 }
