--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-cli": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "express": "^4.16.2",
+    "mime": "^1",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "sass-loader": "^6.0.6"
